week 3 ungraded lab - prevent hidden cells in colab

--- a/course1/week3-ungraded-lab/C1W3_Data_Labeling_Ungraded_Lab.ipynb
+++ b/course1/week3-ungraded-lab/C1W3_Data_Labeling_Ungraded_Lab.ipynb
@@ -13,6 +13,7 @@
    "source": [
     "# Week 3 - Ungraded Lab: Data Labeling\n",
     "\n",
+    "----------------\n",
     "\n",
     "Welcome to the ungraded lab for week 3 of Machine Learning Engineering for Production. In this lab, you will see how the data labeling process affects the performance of a classification model. Labeling data is usually a very labor intensive and costly task but it is of great importance.\n",
     "\n",
@@ -39,8 +40,6 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "import re\n",
-    "import glob\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
@@ -929,8 +928,10 @@
   }
  ],
  "metadata": {
-  "jupytext": {
-   "encoding": "# -*- coding: utf-8 -*-"
+  "colab": {
+   "collapsed_sections": [],
+   "name": "C1W3_Data_Labeling_Ungraded_Lab.ipynb",
+   "provenance": []
   },
   "kernelspec": {
    "display_name": "Python 3",
