ungraded lab - fix typo in client.ipynb

--- a/course1/week1-ungraded-lab/client.ipynb
+++ b/course1/week1-ungraded-lab/client.ipynb
@@ -248,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Congratulations on finishing this ungraded lab!** Real life clients and servers have a lot more going on in terms of security and performance. However, the code you just experience with is close to what you see in real production environments. \n",
+    "**Congratulations on finishing this ungraded lab!** Real life clients and servers have a lot more going on in terms of security and performance. However, the code you just experienced is close to what you see in real production environments. \n",
     "Hopefully, this lab served the purpose of increasing your familiarity with the process of deploying a Deep Learning model, and consuming from it.\n",
     "\n",
     "**Keep it up!**"
