C4 W1 Lab 3: minor typo fix

--- a/course4/week1-ungraded-labs/C4_W1_Lab_3_TFS.ipynb
+++ b/course4/week1-ungraded-labs/C4_W1_Lab_3_TFS.ipynb
@@ -10,7 +10,7 @@
     "------------------------\n",
     "\n",
     "\n",
-    "In this lab you will be taking a look at TFX's model serving system for production called [Tensorflow Serving](https://www.tensorflow.org/tfx/guide/serving). This system is highly integrated with the Tensforlow stack and provides an easy and straightforward way of deploying models.\n",
+    "In this lab you will be taking a look at TFX's model serving system for production called [Tensorflow Serving](https://www.tensorflow.org/tfx/guide/serving). This system is highly integrated with the Tensorflow stack and provides an easy and straightforward way of deploying models.\n",
     "\n",
     "Specifically you will:\n",
     "- Learn how to install TF serving.\n",
