C4 W3 Lab 1: added figure

--- a/course4/week3-ungraded-labs/C4_W3_Lab_1_Intro_to_KFP/C4_W3_Lab_1_Kubeflow_Pipelines.ipynb
+++ b/course4/week3-ungraded-labs/C4_W3_Lab_1_Intro_to_KFP/C4_W3_Lab_1_Kubeflow_Pipelines.ipynb
@@ -556,12 +556,17 @@
     "    name=\"my-pipeline\",\n",
     ")\n",
     "def my_pipeline(url: str):\n",
+    "    \n",
     "    download_data_task = download_data(url=url)\n",
+    "    \n",
     "    split_data_task = split_data(input_csv=download_data_task.outputs['output_csv'])\n",
+    "    \n",
     "    preprocess_data_task = preprocess_data(input_train_csv=split_data_task.outputs['train_csv'],\n",
     "                                           input_test_csv=split_data_task.outputs['test_csv'])\n",
+    "    \n",
     "    train_model_task = train_model(input_train_x=preprocess_data_task.outputs[\"output_train_x\"],\n",
     "                                   input_train_y=preprocess_data_task.outputs[\"output_train_y\"])\n",
+    "    \n",
     "    eval_model_task = eval_model(input_model=train_model_task.outputs[\"output_model\"],\n",
     "                                 input_history=train_model_task.outputs[\"output_history\"],\n",
     "                                   input_test_x=preprocess_data_task.outputs[\"output_test_x\"],\n",
@@ -579,6 +584,15 @@
     "kfp.compiler.Compiler(mode=kfp.dsl.PipelineExecutionMode.V2_COMPATIBLE).compile(\n",
     "    pipeline_func=my_pipeline,\n",
     "    package_path='pipeline.yaml')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After you've uploaded and ran the entire pipeline, you should see all green boxes and the training metrics in the `Visualizations` tab of the `eval-model` task.\n",
+    "\n",
+    "<img src='./img/complete_pipeline.png' alt=\"./img/complete_pipeline.png\" width=640>"
    ]
   },
   {
