C4 W2 Lab 4: Use Keras instead of Estimator

--- a/course4/week2-ungraded-labs/C4_W2_Lab_4_ETL_Beam/C4_W2_Lab_4_Apache_Beam_and_Tensorflow.ipynb
+++ b/course4/week2-ungraded-labs/C4_W2_Lab_4_ETL_Beam/C4_W2_Lab_4_Apache_Beam_and_Tensorflow.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "C4_W2_Lab_4_Apache_Beam_and_Tensorflow.ipynb",
+      "name": "C4_W2_Lab_4_Apache_Beam_and_Tensorflow (2).ipynb",
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": []
@@ -14,8 +14,7 @@
     },
     "language_info": {
       "name": "python"
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -249,7 +248,7 @@
       "source": [
         "### Run the preprocessing pipeline\n",
         "\n",
-        "You will run the script first and the following sections will discuss the relevant parts of this code. This will take around 5 minutes to run on a GPU runtime."
+        "You will run the script first and the following sections will discuss the relevant parts of this code. This will take around 6 minutes to run."
       ]
     },
     {
@@ -287,7 +286,8 @@
         "* **transform_fn** - the transformation graph describing how to transform SDF inputs to tensors\n",
         "* **transformed_metadata** - contains the metadata describing the data types of the `tf.Transform` outputs\n",
         "* **train-dataset** - contains the transformed training dataset\n",
-        "* **eval-dataset** - contains the transformed evaluation dataset\n"
+        "* **eval-dataset** - contains the transformed evaluation dataset\n",
+        "* **PreprocessData** - pickled file containing variables you will use in the training phase\n"
       ]
     },
     {
@@ -360,12 +360,61 @@
       },
       "source": [
         "import tensorflow as tf\n",
+        "from pprint import pprint\n",
         "\n",
         "# Create TF Dataset from TFRecord of training set\n",
         "train_data = tf.data.TFRecordDataset(f'{WORK_DIR}/train-dataset/part-00000-of-00001')\n",
         "\n",
         "# Print two records\n",
-        "get_records(train_data, 2)"
+        "test_data = get_records(train_data, 2)\n",
+        "\n",
+        "pprint(test_data)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "v-76euq1v8eA"
+      },
+      "source": [
+        "*Note: From the output cell above, you might concur that we'll need more than the atom counts to make better predictions. You'll notice that the counts are identical in both records but the `Energy` value is different. Thus, you cannot expect the model to have a low loss during the training phase later. For simplicity, we'll just use atom counts in this exercise but feel free to revise later to have more predictive features. You can share your findings in our Discourse community to discuss with other learners who are interested in the same problem.*"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zuSdU2unjfuk"
+      },
+      "source": [
+        "The `PreprocessData` contains Python objects needed in the training phase such as:\n",
+        "\n",
+        "* the filename patterns of the training and eval set directories\n",
+        "* spec file describing the input features\n",
+        "* name of the label column\n",
+        "\n",
+        "These are saved in a serialized file using [dill](https://pypi.org/project/dill/) when you ran the `preprocess` script earlier and you can deserialize it using the cell below to view its contents."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DWAQW4zDtmA3"
+      },
+      "source": [
+        "import dill as pickle\n",
+        "\n",
+        "# Helper function to load the serialized file\n",
+        "def load(filename):\n",
+        "  with tf.io.gfile.GFile(filename, 'rb') as f:\n",
+        "    return pickle.load(f)\n",
+        "\n",
+        "# Load PreprocessData\n",
+        "preprocess_data = load('/content/results/PreprocessData')\n",
+        "\n",
+        "# Print contents\n",
+        "pprint(vars(preprocess_data))"
       ],
       "execution_count": null,
       "outputs": []
@@ -376,7 +425,7 @@
         "id": "O9p8fq4J1em6"
       },
       "source": [
-        "The next sections will describe how these are implemented in `preprocess.py`. You can open this file in a separate text editor so you can look at it more closely while reviewing the snippets below."
+        "The next sections will describe how these are implemented as a Beam pipeline in `preprocess.py`. You can open this file in a separate text editor so you can look at it more closely while reviewing the snippets below."
       ]
     },
     {
@@ -686,9 +735,7 @@
         "\n",
         "Recall that at the end of the preprocessing phase, the code split the data into two datasets (training and evaluation).\n",
         "\n",
-        "The sample uses TensorFlow to train the machine learning model. The `trainer/task.py` file in the Molecules code sample contains the code for training the model. The main function of `trainer/task.py` loads the data that was processed in the preprocessing phase.\n",
-        "\n",
-        "The Estimator uses the training dataset to train the model, and then uses the evaluation dataset to verify that the model accurately predicts molecular energy given some of the molecule’s properties.\n",
+        "The script uses a simple dense neural network for the regression problem. The `trainer/task.py` file contains the code for training the model. The main function of `trainer/task.py` loads the parameters needed from the preprocessing phase and passes it to the task runner function (i.e. `run_fn`).\n",
         "\n",
         "In this exercise, we will not focus too much on the training metrics (e.g. accuracy). That is discussed in other courses of this specialization. The main objective is to look at the outputs and how it is connected to the prediction phase."
       ]
@@ -711,8 +758,8 @@
         "id": "XOEhQ5szvd-f"
       },
       "source": [
-        "# Run the trainer. This will take around 3 minutes.\n",
-        "!python ./molecules/trainer/task.py --work-dir={WORK_DIR}"
+        "# Run the trainer.\n",
+        "!python ./molecules/trainer/task.py --work-dir {WORK_DIR}"
       ],
       "execution_count": null,
       "outputs": []
@@ -723,7 +770,7 @@
         "id": "Qm7x_Jx-3wdi"
       },
       "source": [
-        "The outputs of this phase are in the `model` directory and the most important part is the `export` subdirectory. That contains the trained model that you will use for predictions. "
+        "The outputs of this phase are in the `model` directory. This will be the trained model that you will use for predictions. "
       ]
     },
     {
@@ -732,29 +779,7 @@
         "id": "umUBl5byXxOv"
       },
       "source": [
-        "!ls {WORK_DIR}"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "bPx2rsM357Bb"
-      },
-      "source": [
-        "You can set this to a variable with the code below. This will be used when running the prediction script."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "knXIqYtx58_Y"
-      },
-      "source": [
-        "# To get the path of the trained model\n",
-        "EXPORT_DIR=f'{WORK_DIR}/model/export/final'\n",
-        "MODEL_DIR=!(ls -d -1 $EXPORT_DIR/* | sort -r | head -n 1)"
+        "!ls {WORK_DIR}/model"
       ],
       "execution_count": null,
       "outputs": []
@@ -765,49 +790,61 @@
         "id": "g9wB5HNK5pdt"
       },
       "source": [
-        "The important thing to note in the training script is it also exports the transformation graph with the model. That is shown in this line:\n",
+        "The important thing to note in the training script is it also exports the transformation graph with the model. That is shown in these lines:\n",
         "\n",
         "<details> \n",
         "<summary> Click here to see the code snippet </summary>\n",
         "\n",
         "```\n",
-        "  exporter = tf.estimator.FinalExporter(\n",
-        "      'final', make_serving_input_fn(tft_output, input_feature_spec, labels))\n",
+        "# Define default serving signature\n",
+        "signatures = {\n",
+        "    'serving_default':\n",
+        "        _get_serve_tf_examples_fn(model,\n",
+        "                                  tf_transform_output, input_feature_spec).get_concrete_function(\n",
+        "                                      [signatures_dict])\n",
+        "}\n",
+        "\n",
+        "# Save model with signature\n",
+        "model.save(fn_args.serving_model_dir, save_format='tf', signatures=signatures, include_optimizer=False)\n",
         "```\n",
         "</details>\n",
         "\n",
-        "The implementation of `make_serving_input_fn()` is as follows:\n",
+        "The implementation of `_get_serve_tf_examples_fn()` is as follows:\n",
         "\n",
         "<details> \n",
         "<summary> Click here to see the code snippet </summary>\n",
         "\n",
         "```\n",
-        "def make_serving_input_fn(\n",
-        "    tft_output, input_feature_spec, labels):\n",
-        "  \"\"\"Makes an input_fn for serving prediction.\n",
+        "def _get_serve_tf_examples_fn(model, tf_transform_output, feature_spec):\n",
+        "  \"\"\"Returns a function that applies data transformation and generates predictions\"\"\"\n",
         "\n",
-        "  This will use the inputs format produced by the preprocessing PTransform. This\n",
-        "  applies the transformations from the tf.Transform preprocessing_fn before\n",
-        "  serving it to the TensorFlow model.\n",
-        "  \"\"\"\n",
-        "  def serving_input_fn():\n",
-        "    input_features = {}\n",
-        "    for feature_name in input_feature_spec:\n",
-        "      if feature_name in labels:\n",
-        "        continue\n",
-        "      dtype = input_feature_spec[feature_name].dtype\n",
-        "      input_features[feature_name] = tf.compat.v1.placeholder(\n",
-        "          dtype, shape=[None], name=feature_name)\n",
+        "  # Get transformation graph\n",
+        "  model.tft_layer = tf_transform_output.transform_features_layer()\n",
         "\n",
-        "    inputs = tft_output.transform_raw_features(input_features)\n",
+        "  @tf.function\n",
+        "  def serve_tf_examples_fn(inputs_list):\n",
+        "    \"\"\"Returns the output to be used in the serving signature.\"\"\"\n",
+        "    \n",
+        "    # Create a shallow copy of the dictionary in the single element list\n",
+        "    inputs = inputs_list[0].copy()\n",
         "\n",
-        "    return tf.estimator.export.ServingInputReceiver(inputs, input_features)\n",
+        "    # Pop ID since it is not needed in the transformation graph\n",
+        "    # Also needed to identify predictions\n",
+        "    id_key = inputs.pop('ID')\n",
+        "    \n",
+        "    # Apply data transformation to the raw inputs\n",
+        "    transformed = model.tft_layer(inputs)\n",
         "\n",
-        "  return serving_input_fn\n",
+        "    # Pass the transformed data to the model to get predictions\n",
+        "    predictions = model(transformed.values())\n",
+        "\n",
+        "    return id_key, predictions\n",
+        "\n",
+        "  return serve_tf_examples_fn\n",
         "```\n",
         "</details>\n",
         "\n",
-        "The use of `tft_output.transform_raw_features()` means that your model can accept raw data and it will do the transformation before feeding it to make predictions. It implies that when you serve your model for predictions, you don't have to worry about creating a pipeline to transform new data coming in. The model will already do that for you through this serving input function. It helps to prevent training-serving skew since you're handling the training and serving data the same way."
+        "The use of `model.tft_layer` means that your model can accept raw data and it will do the transformation before feeding it to make predictions. It implies that when you serve your model for predictions, you don't have to worry about creating a pipeline to transform new data coming in. The model will already do that for you through this serving input function. It helps to prevent training-serving skew since you're handling the training and serving data the same way."
       ]
     },
     {
@@ -818,7 +855,7 @@
       "source": [
         "## Phase 4: Prediction\n",
         "\n",
-        "After the Estimator trains the model, you can provide the model with inputs and it will make predictions. The pipeline in `predict.py` is responsible for making predictions. It reads the input files from the custom source and writes the output predictions as text files to the specified working directory.\n",
+        "After training the model, you can provide the model with inputs and it will make predictions. The pipeline in `predict.py` is responsible for making predictions. It reads the input files from the custom source and writes the output predictions as text files to the specified working directory.\n",
         "\n",
         "<details> \n",
         "<summary> Click here to see the code snippet </summary>\n",
@@ -860,7 +897,6 @@
         "\n",
         "<details> \n",
         "<summary> Click here to see the code snippet </summary>\n",
-        "\n",
         "\n",
         "```\n",
         "run(\n",
@@ -940,7 +976,8 @@
         "id": "vXTi7NPJ6My1"
       },
       "source": [
-        "# Define input and output data directories\n",
+        "# Define model, input and output data directories\n",
+        "MODEL_DIR = f'{WORK_DIR}/model'\n",
         "DATA_DIR = f'{WORK_DIR}/data'\n",
         "PRED_DIR = f'{WORK_DIR}/predictions'"
       ],
@@ -953,9 +990,9 @@
         "id": "tTc-Q9q7sa65"
       },
       "source": [
-        "# Run batch prediction. This will take around 7 minutes on a GPU runtime.\n",
+        "# Run batch prediction. This will take around 7 minutes.\n",
         "!python ./molecules/predict.py \\\n",
-        "  --model-dir {MODEL_DIR[0]} \\\n",
+        "  --model-dir {MODEL_DIR} \\\n",
         "  --work-dir {WORK_DIR} \\\n",
         "  batch \\\n",
         "  --inputs-dir {DATA_DIR} \\\n",
