C4 W1 Lab 3: fixed typo

--- a/course4/week1-ungraded-labs/C4_W1_Lab_3_TFS.ipynb
+++ b/course4/week1-ungraded-labs/C4_W1_Lab_3_TFS.ipynb
@@ -104,7 +104,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Now that you are familiar with the data are going to be working with, let's jump to the model."
+    "Now that you are familiar with the data you're going to be working with, let's jump to the model."
    ],
    "metadata": {
     "id": "0aEMMrP1oyfx"
