add confidence parameter to the client.ipynb

--- a/course1/week1-ungraded-lab/server.ipynb
+++ b/course1/week1-ungraded-lab/server.ipynb
@@ -677,7 +677,98 @@
      "text": [
       "INFO:     127.0.0.1:52227 - \"GET /docs HTTP/1.1\" 200 OK\n",
       "INFO:     127.0.0.1:52227 - \"GET /openapi.json HTTP/1.1\" 200 OK\n",
-      "INFO:     127.0.0.1:52228 - \"POST /predict?model=yolov3-tiny&confidence=0.2 HTTP/1.1\" 200 OK\n"
+      "INFO:     127.0.0.1:52228 - \"POST /predict?model=yolov3-tiny&confidence=0.2 HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:52314 - \"POST /predict?model=yolov3-tiny&confidence=0.2 HTTP/1.1\" 200 OK\n",
+      "INFO:     127.0.0.1:52319 - \"POST /predict?model=yolov3-tiny HTTP/1.1\" 422 Unprocessable Entity\n",
+      "INFO:     127.0.0.1:52321 - \"POST /predict?model=yolov3-tiny?confidence=0.2 HTTP/1.1\" 422 Unprocessable Entity\n",
+      "INFO:     127.0.0.1:52323 - \"POST /predict?model=yolov3-tiny?confidence=0.2 HTTP/1.1\" 422 Unprocessable Entity\n",
+      "INFO:     127.0.0.1:52326 - \"GET /predict?model=yolov3-tiny?confidence=0.2 HTTP/1.1\" 405 Method Not Allowed\n",
+      "INFO:     127.0.0.1:52326 - \"GET /favicon.ico HTTP/1.1\" 404 Not Found\n",
+      "INFO:     127.0.0.1:52327 - \"GET /predict?model=yolov3-tiny?confidence=0.2 HTTP/1.1\" 405 Method Not Allowed\n",
+      "INFO:     127.0.0.1:52327 - \"GET /predict?model=yolov3-tiny HTTP/1.1\" 405 Method Not Allowed\n",
+      "INFO:     127.0.0.1:52329 - \"GET /predict?model=yolov3-tiny&confidence=0.2 HTTP/1.1\" 405 Method Not Allowed\n",
+      "INFO:     127.0.0.1:52331 - \"GET /predict?model=yolov3-tiny&confidence=0.2 HTTP/1.1\" 405 Method Not Allowed\n",
+      "INFO:     127.0.0.1:52335 - \"POST /predict?model=yolov3-tiny?confidence=0.2 HTTP/1.1\" 422 Unprocessable Entity\n",
+      "INFO:     127.0.0.1:52337 - \"POST /predict?model=yolov3-tiny?confidence=0.2 HTTP/1.1\" 422 Unprocessable Entity\n",
+      "INFO:     127.0.0.1:52339 - \"GET / HTTP/1.1\" 200 OK\n",
+      "Downloading yolov3.cfg from https://github.com/arunponnusamy/object-detection-opencv/raw/master/yolov3.cfg\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0% |                                                                        |\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading yolov3.weights from https://pjreddie.com/media/files/yolov3.weights\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 49% |###################################                                     |\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:52364 - \"POST /predict?model=yolov3-tiny&confidence=0.2 HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 50% |####################################                                    |\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:52364 - \"POST /predict?model=yolov3-tiny&confidence=0.2 HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 63% |#############################################                           |\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:52367 - \"GET /predict?model=yolov3-tiny&confidence=0.2 HTTP/1.1\" 405 Method Not Allowed\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 70% |##################################################                      |\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO:     127.0.0.1:52369 - \"POST /predict?model=yolov3-tiny&confidence=0.2 HTTP/1.1\" 200 OK\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 78% |########################################################                |\r"
      ]
     }
    ],
