--- a/course1/week1-ungraded-lab/client.ipynb
+++ b/course1/week1-ungraded-lab/client.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "marked-danger",
    "metadata": {},
    "source": [
     "# Ungraded Lab Part 2 - Consuming a Machine Learning Model\n",
@@ -15,6 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "chronic-local",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,6 +30,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "promotional-indonesian",
    "metadata": {},
    "source": [
     "## Understanding the URL\n",
@@ -50,6 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dressed-regular",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,6 +64,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "catholic-determination",
    "metadata": {},
    "source": [
     "To consume your model, you append the endpoint to the base URL to get the full URL. Notice that the parameters are absent for now."
@@ -68,6 +73,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "otherwise-beatles",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,6 +83,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "excited-archive",
    "metadata": {},
    "source": [
     "To set any of the expected parameters, the syntax is to add a \"?\" character followed by the name of the parameter and its value.\n",
@@ -87,6 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "opponent-merit",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,6 +104,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "administrative-bedroom",
    "metadata": {},
    "source": [
     "This endpoint expects both a model's name and an image. But since the image is more complex it is not passed within the URL. Instead we leverage the `requests` library to handle this process.\n",
@@ -114,6 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "automotive-turkish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,6 +150,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "geographic-render",
    "metadata": {},
    "source": [
     "To test this function, open a file in your filesystem and pass it as a parameter alongside the URL:"
@@ -148,6 +159,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "coordinate-strand",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,6 +169,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "falling-encyclopedia",
    "metadata": {},
    "source": [
     "Great news! The request was successful. However, you are not getting any information about the objects in the image.\n",
@@ -169,6 +182,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "dense-monday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,6 +193,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "equipped-soundtrack",
    "metadata": {},
    "source": [
     "\n",
@@ -188,6 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "external-subdivision",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -210,6 +226,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "afraid-northeast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,6 +235,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "nervous-vermont",
    "metadata": {},
    "source": [
     "Now you are ready to consume your object detection model through your own client!\n",
@@ -228,6 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "disturbed-trout",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,6 +265,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "varied-costs",
    "metadata": {},
    "source": [
     "**Congratulations on finishing this ungraded lab!** Real life clients and servers have a lot more going on in terms of security and performance. However, the code you just experienced is close to what you see in real production environments. \n",
@@ -256,6 +276,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "binding-radio",
    "metadata": {},
    "source": [
     "# \n",
@@ -308,7 +329,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.10"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
