C1 W2 ugl - use sparse instead of binary for class mode

--- a/course1/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
+++ b/course1/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
@@ -565,6 +565,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "9YjjV9iU78Ca"
@@ -577,7 +578,7 @@
     "- `directory`: Path to the root directory where the images are stored.\n",
     "- `target_size`: The dimensions to which all images found will be resized. Since images come in all kinds of resolutions, you need to standardize their size. 150x150 is used but other values should work well too.\n",
     "- `batch_size`: Number of images the generator yields everytime it is asked for a next batch. 32 is used here.\n",
-    "- `class_mode`: How the labels are represented. Here \"binary\" is used to indicate that labels will be 1D. This is done for compatibility with the loss and evaluation metrics used when compiling the model.\n",
+    "- `class_mode`: How the labels are represented. Here \"sparse\" is used to indicate that labels will be 1D. This is done for compatibility with the loss and evaluation metrics used when compiling the model.\n",
     "\n",
     "If you want to learn more about using Keras' ImageDataGenerator, check this [tutorial](https://www.tensorflow.org/api_docs/python/tf/keras/preprocessing/image/ImageDataGenerator)."
    ]
@@ -601,13 +602,13 @@
     "        '/tmp/data/imbalanced/train',\n",
     "        target_size=(150, 150),\n",
     "        batch_size=32,\n",
-    "        class_mode='binary')\n",
+    "        class_mode='sparse')\n",
     "\n",
     "validation_generator = test_datagen.flow_from_directory(\n",
     "        '/tmp/data/imbalanced/eval',\n",
     "        target_size=(150, 150),\n",
     "        batch_size=32,\n",
-    "        class_mode='binary')"
+    "        class_mode='sparse')"
    ]
   },
   {
@@ -781,7 +782,7 @@
     "    '/tmp/data/imbalanced/eval',\n",
     "    target_size=(150, 150),\n",
     "    batch_size=32,\n",
-    "    class_mode='binary',\n",
+    "    class_mode='sparse',\n",
     "    shuffle=False)"
    ]
   },
@@ -838,9 +839,9 @@
    },
    "outputs": [],
    "source": [
-    "misclassified_birds = (imbalanced_cm[1,0] + imbalanced_cm[2,0])/np.sum(imbalanced_cm, axis=0)[0]\n",
-    "misclassified_cats = (imbalanced_cm[0,1] + imbalanced_cm[2,1])/np.sum(imbalanced_cm, axis=0)[1]\n",
-    "misclassified_dogs = (imbalanced_cm[0,2] + imbalanced_cm[1,2])/np.sum(imbalanced_cm, axis=0)[2]\n",
+    "misclassified_birds = (imbalanced_cm[0, 1] + imbalanced_cm[0, 2])/np.sum(imbalanced_cm, axis=1)[0]\n",
+    "misclassified_cats = (imbalanced_cm[1, 0] + imbalanced_cm[1, 2])/np.sum(imbalanced_cm, axis=1)[1]\n",
+    "misclassified_dogs = (imbalanced_cm[2, 0] + imbalanced_cm[2, 1])/np.sum(imbalanced_cm, axis=1)[2]\n",
     "\n",
     "print(f\"Proportion of misclassified birds: {misclassified_birds*100:.2f}%\")\n",
     "print(f\"Proportion of misclassified cats: {misclassified_cats*100:.2f}%\")\n",
@@ -902,7 +903,7 @@
     "    '/tmp/data/eval',\n",
     "    target_size=(150, 150),\n",
     "    batch_size=32,\n",
-    "    class_mode='binary',\n",
+    "    class_mode='sparse',\n",
     "    shuffle=False)\n",
     "\n",
     "# Get the true labels from the generator\n",
@@ -961,13 +962,13 @@
     "        '/tmp/data/train',\n",
     "        target_size=(150, 150),\n",
     "        batch_size=32,\n",
-    "        class_mode='binary')\n",
+    "        class_mode='sparse')\n",
     "\n",
     "validation_generator = test_datagen.flow_from_directory(\n",
     "        '/tmp/data/eval',\n",
     "        target_size=(150, 150),\n",
     "        batch_size=32,\n",
-    "        class_mode='binary')"
+    "        class_mode='sparse')"
    ]
   },
   {
@@ -1024,7 +1025,7 @@
     "    '/tmp/data/eval',\n",
     "    target_size=(150, 150),\n",
     "    batch_size=32,\n",
-    "    class_mode='binary',\n",
+    "    class_mode='sparse',\n",
     "    shuffle=False)"
    ]
   },
@@ -1150,13 +1151,13 @@
     "        '/tmp/data/train',\n",
     "        target_size=(150, 150),\n",
     "        batch_size=32,\n",
-    "        class_mode='binary')\n",
+    "        class_mode='sparse')\n",
     "\n",
     "validation_generator = test_datagen.flow_from_directory(\n",
     "        '/tmp/data/eval',\n",
     "        target_size=(150, 150),\n",
     "        batch_size=32,\n",
-    "        class_mode='binary')"
+    "        class_mode='sparse')"
    ]
   },
   {
