C1W2 lab - Fixedx Typos

--- a/course1/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
+++ b/course1/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
@@ -849,12 +849,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "e3tpDKCsT564"
    },
    "source": [
-    "Class imbalance is a real problem that if not detected early on, gives the wrong impression that your model is performing better than it actually is. For this reason,  is important to rely on several metrics that do a better job at capturing these kinds of issues. **In this case the standard `accuracy` metric is misleading** and provides a false sense that the model is performing better than it actually is.\n",
+    "Class imbalance is a real problem that if not detected early on, gives the wrong impression that your model is performing better than it actually is. For this reason, it is important to rely on several metrics that do a better job at capturing these kinds of issues. **In this case the standard `accuracy` metric is misleading** and provides a false sense that the model is performing better than it actually is.\n",
     "\n",
     "To prove this point further consider a model that only predicts cats:"
    ]
@@ -1066,6 +1067,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "id": "Dp7QCgZ0Wuf3"
@@ -1073,7 +1075,7 @@
    "source": [
     "Both accuracy-based metrics are very similar now. The confusion matrix also looks way better than before. This suggests that class imbalance has been successfully mitigated by adding more data to the previously undersampled classes.\n",
     "\n",
-    "Now that you now that you can trust the `accuracy` metric, let's plot the training history:"
+    "Now that you know that you can trust the `accuracy` metric, let's plot the training history:"
    ]
   },
   {
