fix (C4 W3): update package name

--- a/course4/week3-ungraded-labs/C4_W3_Lab_1_Intro_to_KFP/C4_W3_Lab_1_Kubeflow_Pipelines.ipynb
+++ b/course4/week3-ungraded-labs/C4_W3_Lab_1_Intro_to_KFP/C4_W3_Lab_1_Kubeflow_Pipelines.ipynb
@@ -256,7 +256,7 @@
    "outputs": [],
    "source": [
     "@component(\n",
-    "    packages_to_install=[\"pandas\", \"sklearn\"],\n",
+    "    packages_to_install=[\"pandas\", \"scikit-learn\"],\n",
     "    output_component_file=\"split_data_component.yaml\"\n",
     ")\n",
     "def split_data(input_csv: Input[Dataset], train_csv: Output[Dataset], test_csv: Output[Dataset]):\n",
