fix (C2 W4): put temporary fix for ungraded lab

--- a/course2/week4-ungraded-lab/C2_W4_Lab_2_Signals.ipynb
+++ b/course2/week4-ungraded-lab/C2_W4_Lab_2_Signals.ipynb
@@ -133,7 +133,7 @@
     "import pandas as pd\n",
     "\n",
     "# Put dataset in a dataframe\n",
-    "df = pd.read_csv(INPUT_FILE, header=None, names=['user_id', 'activity', 'timestamp', 'x-acc','y-acc', 'z-acc'])\n",
+    "df = pd.read_csv(INPUT_FILE, header=None, names=['user_id', 'activity', 'timestamp', 'x-acc','y-acc', 'z-acc'], on_bad_lines='skip')\n",
     "\n",
     "# Preview the first few rows\n",
     "df.head()"
