fix (C1W2): check if dir exists before creating it

--- a/course1/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
+++ b/course1/week2-ungraded-lab/C1W2_Ungraded_Lab_Birds_Cats_Dogs.ipynb
@@ -227,7 +227,8 @@
    "source": [
     "raw_birds_dir = '/tmp/data/CUB_200_2011/images'\n",
     "base_birds_dir = os.path.join(base_dir,'PetImages/Bird')\n",
-    "os.mkdir(base_birds_dir)\n",
+    "if not os.path.exists(base_birds_dir):\n",
+    "  os.mkdir(base_birds_dir)\n",
     "\n",
     "for subdir in os.listdir(raw_birds_dir):\n",
     "  subdir_path = os.path.join(raw_birds_dir, subdir)\n",
