--- a/course4/week1-ungraded-labs/C4_W1_Lab_3_TFS.ipynb
+++ b/course4/week1-ungraded-labs/C4_W1_Lab_3_TFS.ipynb
@@ -79,7 +79,7 @@
     "base_dir = '/tmp/data'\n",
     "\n",
     "# Unzip images\n",
-    "with zipfile.ZipFile('/content/images.zip', 'r') as my_zip:\n",
+    "with zipfile.ZipFile('images.zip', 'r') as my_zip:\n",
     "  my_zip.extractall(base_dir)\n",
     "\n",
     "# Save paths for images of each class\n",
